# Root CMakeList.txt for liblongboard

set(PROJECT_NAME "onlydreamsnow")

cmake_minimum_required(VERSION 2.8.11)
project(${PROJECT_NAME})

include(FindPkgConfig)
include(CMakePackageConfigHelpers)

set(ONLYDREAMSNOW_EXE "onlydreamsnow")
set(ONLYDREAMSNOW_SRC "${PROJECT_SOURCE_DIR}/src")
set(ONLYDREAMSNOW_VERSION_MAJOR "0")
set(ONLYDREAMSNOW_VERSION_MINOR "1")
set(ONLYDREAMSNOW_VERSION_PATCH "0")
set(ONLYDREAMSNOW_VERSION 
	"${ONLYDREAMSNOW_VERSION_MAJOR}.${ONLYDREAMSNOW_VERSION_MINOR}.${ONLYDREAMSNOW_VERSION_PATCH}")

# CMake Install Directories
set(CMAKE_INSTALL_BINDIR "bin")

# C flags
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=gnu++11 -Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -DDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -DNDEBUG -O3")

# Source Code
add_subdirectory(${ONLYDREAMSNOW_SRC})
set(ONLYDREAMSNOW_SOURCE_FILES ${SOURCE_FILES})

pkg_search_module(LIBOPENCV REQUIRED opencv)
pkg_search_module(LIBCONFUSE REQUIRED libconfuse)

# Build and link the executable
add_executable(${ONLYDREAMSNOW_EXE} ${ONLYDREAMSNOW_SOURCE_FILES})
target_link_libraries(${ONLYDREAMSNOW_EXE} ${LIBOPENCV_LIBRARIES})
target_link_libraries(${ONLYDREAMSNOW_EXE} ${LIBCONFUSE_LIBRARIES})

# Config File Settings
set(ONLYDREAMSNOW_INSTALL_PREFIX      "${CMAKE_INSTALL_PREFIX}")
set(ONLYDREAMSNOW_INSTALL_EXEC_PREFIX "${CMAKE_INSTALL_PREFIX}")
set(ONLYDREAMSNOW_INSTALL_BINDIR 
	"${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR}")
set(ONLYDREAMSNOW_INSTALL_INCLUDEDIR 
	"${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}")

# Set install targets
install(TARGETS ${ONLYDREAMSNOW_EXE} 
	DESTINATION ${CMAKE_INSTALL_BINDIR})

# build a CPack driven installer package
include(InstallRequiredSystemLibraries)
# CPack Options
set(CPACK_PACKAGE_CONTACT "" CACHE STRING 
	"The contact information for the package distributor")
set(CPACK_TARGET_ARCH "armhf" CACHE STRING "Target architecture.")
set(CPACK_TARGET_OS "Linux" CACHE STRING "Target operating system.")
# CPack Settings 
SET(CPACK_GENERATOR "DEB")
SET(CPACK_SOURCE_GENERATOR "TGZ;TBZ2;ZIP")
set(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")
set(CPACK_RESOURCE_FILE_README  "${PROJECT_SOURCE_DIR}/README.md")
set(CPACK_PACKAGE_VERSION_MAJOR "${ONLYDREAMSNOW_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${ONLYDREAMSNOW_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${ONLYDREAMSNOW_VERSION_PATCH}")
SET(CPACK_SYSTEM_NAME "${CPACK_TARGET_OS}-${CPACK_TARGET_ARCH}")
SET(CPACK_TOPLEVEL_TAG "${CPACK_TARGET_OS}-${CPACK_TARGET_ARCH}")
include(CPack)
